--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ mypy-extensions==0.4.3
 pathspec==0.10.1
 Pillow==9.2.0
 platformdirs==2.5.2
+psycopg2-binary==2.9.5
 pytz==2022.6
 requests==2.28.1
 soupsieve==2.3.2.post1
