--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: .
     command: python manage.py runserver 0.0.0.0:8080
     volumes:
-      - ./:/usr/src/app/
+      - ./:/usr/src/commerce/
     ports:
       - 8080:8080
     env_file:
