--- a/.github/workflows/new_main.yml
+++ b/.github/workflows/new_main.yml
@@ -26,5 +26,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
+          run: docker-compose --build
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/clockbox:latest
