--- a/.github/workflows/new_main.yml
+++ b/.github/workflows/new_main.yml
@@ -26,6 +26,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          run: docker-compose --build
+          file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/commerce_hub:latest
